--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -58,13 +58,11 @@ jobs:
         uses: actions/github-script@v5
         with:
           script: |
-            const exec = require('@actions/exec');
+            const { exec } = require('@actions/exec');
             const HEROKU_APP_NAME = process.env.HEROKU_APP_NAME;
             const url = `https://${HEROKU_APP_NAME}.herokuapp.com/health-check`;
-            await exec.exec(`curl`, [url]);
+            await exec(`curl`, [url]);
         env:
           HEROKU_APP_NAME: ${{ secrets.HEROKU_APP_NAME }}
-          
-   
           
 ### ⬆ IMPORTANT PART ⬆ ###
