--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -55,14 +55,6 @@ jobs:
           process_type: web
 
       - name: Warm-up request
-        uses: actions/github-script@v5
-        with:
-          script: |
-            const { exec } = require('@actions/exec');
-            const HEROKU_APP_NAME = process.env.HEROKU_APP_NAME;
-            const url = `https://${HEROKU_APP_NAME}.herokuapp.com/health-check`;
-            await exec(`curl`, [url]);
-        env:
-          HEROKU_APP_NAME: ${{ secrets.HEROKU_APP_NAME }}
-          
+        run: curl https://${{ secrets.HEROKU_APP_NAME }}.herokuapp.com/health-check
+        
 ### ⬆ IMPORTANT PART ⬆ ###
