--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ diffusers==0.18.1
 protobuf==4.23.4
 torch==2.0.1
 transformers==4.30.2
-Flask==2.1.2
-gunicorn==20.1.0
+Flask
+gunicorn
 numpy
+pandas
